# vladOS

./: .gitignore  AGENTS.md  Cargo.toml  GENERAL_PLAN.md  README.md  build.rs  x86_64-blog_os.json
.cargo/: config.toml
docs/: architecture.md  cpu_setup_and_double_fault_test.md
docs/code_walkthrough/: README.md  address_spaces.md  allocator.md  build_config.md  cpu_tables.md  elf_loader.md  exceptions.md  file_descriptors_and_basic_io.md  kernel_entry.md  memory.md  output_and_qemu.md  process_lifecycle.md  tasks.md  tests.md  user_heap_and_brk.md  user_memory_and_write.md  userspace.md
src/: address_space.rs  allocator.rs  elf.rs  fd.rs  file.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  process.rs  qemu.rs  scheduler.rs  serial.rs  syscall.rs  task.rs  user.rs  user_memory.rs  vga_buffer.rs
src/arch/x86_64/: context.rs
tests/: address_spaces.rs  cooperative_tasks.rs  elf_loader.rs  file_descriptors.rs  heap_allocation.rs  interrupts.rs  memory_mapping.rs  page_fault.rs  preemptive_tasks.rs  process_lifecycle.rs  stack_overflow.rs  user_heap.rs  user_syscalls.rs  userspace.rs
