[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
    "-no-reboot",
]
test-success-exit-code = 33

[dependencies]
bootloader = "0.9"
x86_64 = "=0.14.7"

[[bin]]
name = "blog_os"
path = "src/main.rs"
test = false

[[test]]
name = "stack_overflow"
harness = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
