[package]
name = "vlad_os"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
    "-no-reboot",
]
test-success-exit-code = 33

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
linked_list_allocator = "0.10.6"
pic8259 = "0.10.2"
spin = "0.9.8"
x86_64 = "=0.14.7"

[[bin]]
name = "vlad_os"
path = "src/main.rs"
test = false

[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "page_fault"
harness = false

[[test]]
name = "memory_mapping"
harness = false

[[test]]
name = "heap_allocation"
harness = false

[[test]]
name = "interrupts"
harness = false

[[test]]
name = "cooperative_tasks"
harness = false

[[test]]
name = "preemptive_tasks"
harness = false

[[test]]
name = "userspace"
harness = false

[[test]]
name = "address_spaces"
harness = false

[[test]]
name = "elf_loader"
harness = false

[[test]]
name = "user_syscalls"
harness = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
